--- a/src/app/Setting/student-dorm-table/student-dorm-table.component.html
+++ b/src/app/Setting/student-dorm-table/student-dorm-table.component.html
@@ -1,10 +1,55 @@
 <div class="main-content">
   <div class="container-fluid">
 
-
     <div class="row">
       <div class="col-md-12">
-        <a routerLink="/การตั้งค่า/แบบฟอร์มนักเรียนหอพัก" class="btn btn-info">เพิ่มข้อมูลนักเรียนหอพัก</a>
+
+        <div class="card">
+          <div class="card-header card-header-success">
+
+            <div class="row">
+              <div class="col-md-6">
+                <h3>รายชื่อนักเรียนหอพัก</h3>
+                ปีการศึกษา : <input type="text" [(ngModel)]="searchYear"> ภาคเรียน : <input type="text"
+                  [(ngModel)]="searchSemester"> &nbsp;
+                <button (click)="setTable()" >แสดงรายการ</button>
+              </div>
+              <div class="col-md-6 text-right">
+
+                <!-- <button [disabled]="!(lengthSelected == 1)" (click)="goToEdit()" mat-raised-button mat-min-fab
+                  class="btn btn-primary btn-just-icon btn-round">
+                  <i class="material-icons">edit</i>
+                </button>
+                &nbsp; -->
+                <button [disabled]="!lengthSelected" (click)="removeMeter()" mat-raised-button mat-min-fab
+                  class="btn btn-danger btn-just-icon btn-round">
+                  <i class="material-icons">delete</i>
+                </button>
+                &nbsp;
+                <button mat-raised-button mat-min-fab (click)="gotoElectricalMeterForm()"
+                  class="btn btn-primary btn-just-icon btn-round">
+                  <i class="material-icons">add</i>
+                </button>
+                <!-- &nbsp;
+                <button [disabled]="!(studentDormList.length > 0)" (click)="printer()"
+                  class="btn btn-primary mat-raised-button">
+                  <i class="material-icons">file_download</i> Excel
+                </button> -->
+
+              </div>
+            </div>
+
+          </div>
+
+          <div class="card-body">
+            <table datatable id="studentDormTable" (click)="tableClick()"
+              class="table table-striped table-bordred table-haver" cellspacing="0" width="100%" style="width: 100%;">
+
+            </table>
+          </div>
+
+        </div>
+
       </div>
     </div>
 
