--- a/src/app/home/generate-bill-payment/generate-bill-payment.component.html
+++ b/src/app/home/generate-bill-payment/generate-bill-payment.component.html
@@ -249,7 +249,7 @@
 
             <div class="col-md-2 text-right">
 
-              <button type="submit" [disabled]="!(totalPriceMustPay == totalPrice)" class="btn btn-primary">
+              <button type="submit" [disabled]="!(totalPriceMustPay == totalPrice)" (click)="downloadFile()" class="btn btn-primary">
                 <i class="material-icons">file_copy</i> ออกใบแจ้งชำระเงิน
               </button>
             </div>
